--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic/angular": "^4.1.0",
     "@ionic/pro": "2.0.4",
     "core-js": "^2.5.4",
+    "ionic-selectable": "^4.4.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
   },
