--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "GPSToll",
+  "name": "gpstoll",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -56,5 +56,14 @@
     "tslint": "~5.12.0",
     "typescript": "~3.1.6"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zeel91297/GPSToll.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/zeel91297/GPSToll/issues"
+  }
 }
