--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/background-geolocation": "^5.3.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/geolocation": "^5.3.0",
+    "@ionic-native/google-maps": "^5.0.0-beta.27",
     "@ionic-native/local-notifications": "^5.3.0",
     "@ionic-native/location-accuracy": "^5.3.0",
     "@ionic-native/splash-screen": "^5.0.0",
@@ -35,6 +36,7 @@
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-device": "2.0.2",
     "cordova-plugin-geolocation": "4.0.1",
+    "cordova-plugin-googlemaps": "2.5.3",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^3.1.2",
     "cordova-plugin-local-notification": "0.9.0-beta.2",
@@ -102,7 +104,11 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyBNQVQPeg0gARKCWhsMpiXKedFvj5XdQX8",
+        "API_KEY_FOR_IOS": "AIzaSyBNQVQPeg0gARKCWhsMpiXKedFvj5XdQX8"
+      }
     },
     "platforms": [
       "android"
