--- a/package.json
+++ b/package.json
@@ -32,16 +32,16 @@
     "@ionic/angular": "^4.1.0",
     "@ionic/pro": "2.0.4",
     "cordova-android": "7.1.4",
-    "cordova-plugin-android-permissions": "1.0.0",
+    "cordova-plugin-android-permissions": "^1.0.0",
     "cordova-plugin-badge": "^0.8.8",
-    "cordova-plugin-device": "2.0.2",
-    "cordova-plugin-geolocation": "4.0.1",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-googlemaps": "2.5.3",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^3.1.2",
-    "cordova-plugin-local-notification": "0.9.0-beta.2",
-    "cordova-plugin-mauron85-background-geolocation": "3.0.0-alpha.50",
-    "cordova-plugin-request-location-accuracy": "2.2.3",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
+    "cordova-plugin-mauron85-background-geolocation": "^3.0.0-alpha.50",
+    "cordova-plugin-request-location-accuracy": "^2.2.3",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -95,7 +95,16 @@
       "cordova-plugin-android-permissions": {},
       "cordova-plugin-request-location-accuracy": {},
       "cordova-plugin-geolocation": {},
-      "cordova-plugin-mauron85-background-geolocation": {},
+      "cordova-plugin-mauron85-background-geolocation": {
+        "GOOGLE_PLAY_SERVICES_VERSION": "11+",
+        "ANDROID_SUPPORT_LIBRARY_VERSION": "26+",
+        "ICON": "@mipmap/icon",
+        "SMALL_ICON": "@mipmap/icon",
+        "ACCOUNT_NAME": "@string/app_name",
+        "ACCOUNT_LABEL": "@string/app_name",
+        "ACCOUNT_TYPE": "$PACKAGE_NAME.account",
+        "CONTENT_AUTHORITY": "$PACKAGE_NAME"
+      },
       "cordova-plugin-local-notification": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
