--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
     "ionic-selectable": "^4.4.0",
-    "ionic4-date-picker": "0.0.9",
+    "ionic4-date-picker": "^0.1.0",
+    "md5": "^2.2.1",
     "ng-pick-datetime": "^7.0.0",
     "rxjs": "~6.3.3",
     "ts-md5": "^1.2.4",
