--- a/package.json
+++ b/package.json
@@ -32,15 +32,16 @@
     "@ionic/angular": "^4.1.0",
     "@ionic/pro": "2.0.4",
     "cordova-android": "7.1.4",
+    "cordova-browser": "5.0.4",
     "cordova-plugin-android-permissions": "^1.0.0",
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^4.0.1",
-    "cordova-plugin-googlemaps": "2.5.3",
+    "cordova-plugin-googlemaps": "^2.5.3",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^3.1.2",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
-    "cordova-plugin-mauron85-background-geolocation": "^3.0.0-alpha.50",
+    "cordova-plugin-mauron85-background-geolocation": "^3.0.1",
     "cordova-plugin-request-location-accuracy": "^2.2.3",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
@@ -121,7 +122,8 @@
       }
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
