app logo added, native back done, menu changed

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,7 +1,7 @@
 {
-  "name": "GPSToll",
-  "integrations": {
-    "cordova": {}
-  },
-  "type": "angular"
+    "name": "EToll",
+    "integrations": {
+        "cordova": {}
+    },
+    "type": "angular"
 }
