--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ionic/angular": "^4.1.0",
     "@ionic/pro": "2.0.4",
     "cordova-android": "7.1.4",
+    "cordova-browser": "5.0.4",
     "cordova-plugin-android-permissions": "^1.0.0",
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-device": "^2.0.2",
@@ -121,7 +122,8 @@
       }
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
