--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@angular/http": "^7.2.2",
         "@angular/platform-browser": "^7.2.2",
         "@angular/platform-browser-dynamic": "^7.2.2",
+        "@angular/pwa": "^0.13.8",
         "@angular/router": "^7.2.2",
         "@ionic-native/android-permissions": "^5.3.0",
         "@ionic-native/background-geolocation": "^5.3.0",
