--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-whitelist": "^1.3.3",
         "core-js": "^2.5.4",
+        "ionic-select-searchable": "^2.10.0",
         "ionic-selectable": "^4.4.0",
         "ionic4-date-picker": "^0.1.0",
         "md5": "^2.2.1",
