--- a/package.json
+++ b/package.json
@@ -120,7 +120,9 @@
             "cordova-plugin-ionic-keyboard": {},
             "cordova-plugin-googlemaps": {
                 "API_KEY_FOR_ANDROID": "AIzaSyBNQVQPeg0gARKCWhsMpiXKedFvj5XdQX8",
-                "API_KEY_FOR_IOS": "AIzaSyBNQVQPeg0gARKCWhsMpiXKedFvj5XdQX8"
+                "API_KEY_FOR_IOS": "AIzaSyBNQVQPeg0gARKCWhsMpiXKedFvj5XdQX8",
+                "PLAY_SERVICES_VERSION": "15.0.1",
+                "ANDROID_SUPPORT_V4_VERSION": "27.+"
             }
         },
         "platforms": [
