--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
         "@angular/router": "^7.2.2",
         "@ionic-native/android-permissions": "^5.3.0",
         "@ionic-native/background-geolocation": "^5.3.0",
+        "@ionic-native/background-mode": "^5.4.0",
         "@ionic-native/core": "^5.0.0",
         "@ionic-native/geolocation": "^5.3.0",
         "@ionic-native/google-maps": "^5.0.0-beta.27",
         "@ionic-native/local-notifications": "^5.3.0",
         "@ionic-native/location-accuracy": "^5.3.0",
+        "@ionic-native/network": "^5.4.0",
         "@ionic-native/splash-screen": "^5.0.0",
         "@ionic-native/status-bar": "^5.0.0",
         "@ionic/angular": "^4.1.0",
@@ -35,6 +37,7 @@
         "cordova-android": "7.1.4",
         "cordova-browser": "5.0.4",
         "cordova-plugin-android-permissions": "^1.0.0",
+        "cordova-plugin-background-mode": "0.7.2",
         "cordova-plugin-badge": "^0.8.8",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-geolocation": "^4.0.1",
@@ -43,6 +46,7 @@
         "cordova-plugin-ionic-webview": "^3.1.2",
         "cordova-plugin-local-notification": "^0.9.0-beta.2",
         "cordova-plugin-mauron85-background-geolocation": "^3.0.1",
+        "cordova-plugin-network-information": "2.0.1",
         "cordova-plugin-request-location-accuracy": "^2.2.3",
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.4.2",
@@ -123,7 +127,9 @@
                 "API_KEY_FOR_IOS": "AIzaSyBNQVQPeg0gARKCWhsMpiXKedFvj5XdQX8",
                 "PLAY_SERVICES_VERSION": "15.0.1",
                 "ANDROID_SUPPORT_V4_VERSION": "27.+"
-            }
+            },
+            "cordova-plugin-background-mode": {},
+            "cordova-plugin-network-information": {}
         },
         "platforms": [
             "android",
