--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@ionic-native/splash-screen": "^5.0.0",
         "@ionic-native/status-bar": "^5.0.0",
         "@ionic/angular": "^4.1.0",
+        "@ionic/angular-toolkit": "^1.5.1",
         "@ionic/pro": "2.0.4",
         "cordova-android": "7.1.4",
         "cordova-browser": "5.0.4",
@@ -70,7 +71,6 @@
         "@angular/compiler": "~7.2.2",
         "@angular/compiler-cli": "~7.2.2",
         "@angular/language-service": "~7.2.2",
-        "@ionic/angular-toolkit": "~1.4.0",
         "@ionic/lab": "1.0.24",
         "@types/jasmine": "~2.8.8",
         "@types/jasminewd2": "~2.0.3",
