--- a/package.json
+++ b/package.json
@@ -37,21 +37,21 @@
         "@ionic/pro": "2.0.4",
         "cordova-android": "7.1.4",
         "cordova-browser": "5.0.4",
-        "cordova-plugin-android-permissions": "^1.0.0",
-        "cordova-plugin-background-mode": "0.7.2",
+        "cordova-plugin-android-permissions": "^1.0.2",
+        "cordova-plugin-background-mode": "^0.7.2",
         "cordova-plugin-badge": "^0.8.8",
-        "cordova-plugin-device": "^2.0.2",
-        "cordova-plugin-geolocation": "^4.0.1",
-        "cordova-plugin-googlemaps": "^2.5.3",
-        "cordova-plugin-ionic-keyboard": "^2.1.3",
+        "cordova-plugin-device": "^2.0.3",
+        "cordova-plugin-geolocation": "^4.0.2",
+        "cordova-plugin-googlemaps": "^2.6.2",
+        "cordova-plugin-ionic-keyboard": "^2.2.0",
         "cordova-plugin-ionic-webview": "^3.1.2",
         "cordova-plugin-local-notification": "^0.9.0-beta.2",
         "cordova-plugin-mauron85-background-geolocation": "^3.0.1",
-        "cordova-plugin-network-information": "2.0.1",
-        "cordova-plugin-request-location-accuracy": "^2.2.3",
-        "cordova-plugin-splashscreen": "^5.0.2",
-        "cordova-plugin-statusbar": "^2.4.2",
-        "cordova-plugin-whitelist": "^1.3.3",
+        "cordova-plugin-network-information": "^2.0.1",
+        "cordova-plugin-request-location-accuracy": "^2.3.0",
+        "cordova-plugin-splashscreen": "^5.0.3",
+        "cordova-plugin-statusbar": "^2.4.3",
+        "cordova-plugin-whitelist": "^1.3.4",
         "core-js": "^2.5.4",
         "ionic-select-searchable": "^2.10.0",
         "ionic-selectable": "^4.4.0",
@@ -101,7 +101,9 @@
     "cordova": {
         "plugins": {
             "cordova-plugin-android-permissions": {},
-            "cordova-plugin-request-location-accuracy": {},
+            "cordova-plugin-request-location-accuracy": {
+                "PLAY_SERVICES_LOCATION_VERSION": "16.+"
+            },
             "cordova-plugin-geolocation": {},
             "cordova-plugin-mauron85-background-geolocation": {
                 "GOOGLE_PLAY_SERVICES_VERSION": "11+",
